--- a/index1.html
+++ b/index1.html
@@ -9,57 +9,77 @@
 </head>
 <body>
 <div class="container text-center">
-  <div class="row">
-    <div class="col-sm-3">
-      Level 1: .col-sm-3
-    </div>
-    <div class="col-sm-9">
-      <div class="row">
+    <div class="row">
+        <div class="col-sm-3">
+
+            <nav class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+                <img src="https://ajanuw.gallerycdn.vsassets.io/extensions/ajanuw/bs5/0.7.0/1646364353922/Microsoft.VisualStudio.Services.Icons.Default"
+                     alt="Bootstrap" width="30" height="24">
+                <p class="text-white bg-dark">Меню</p>
+                </a>
+            </nav>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Disabled</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-9 mt-5">
+            <div class="row">
                 <div class="col-6 col-sm-4">
-            <div class="card">
-                <div class="card-header">
-                    Товар 1
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">$ 100</h5>
-                    <p class="card-text">10 users included, 2 GB of storage
-                        Email support and 24/7 customer support.</p>
-                    <a href="#" class="btn btn-primary w-100">Купить</a>
+                    <div class="card">
+                        <div class="card-header">
+                            Товар 1
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$ 100</h5>
+                            <p class="card-text">10 users included, 2 GB of storage<br>
+                                Email support and 24/7 customer support.</p>
+                            <a href="#" class="btn btn-primary w-100">Купить</a>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div class="card">
+                        <div class="card-header">
+                            Товар 2
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$ 100</h5>
+                            <p class="card-text">10 users included, 2 GB of storage<br>
+                                Email support and 24/7 customer support.</p>
+                            <a href="#" class="btn btn-primary w-100">Купить</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div class="card">
+                        <div class="card-header">
+                            Товар 3
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$ 100</h5>
+                            <p class="card-text">10 users included, 2 GB of storage<br>
+                                Email support and 24/7 customer support.</p>
+                            <a href="#" class="btn btn-primary w-100">Купить</a>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-6 col-sm-4">
-            <div class="card">
-                <div class="card-header">
-                    Товар 2
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">$ 100</h5>
-                    <p class="card-text">10 users included, 2 GB of storage
-                        Email support and 24/7 customer support.</p>
-                    <a href="#" class="btn btn-primary w-100">Купить</a>
-
-                </div>
-            </div>
-        </div>
-        <div class="col-6 col-sm-4">
-            <div class="card">
-                <div class="card-header">
-                    Товар 3
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">$ 100</h5>
-                    <p class="card-text">10 users included, 2 GB of storage
-                        Email support and 24/7 customer support.</p>
-                    <a href="#" class="btn btn-primary w-100">Купить</a>
-
-                </div>
-            </div>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
 
 </body>
