--- a/index1.html
+++ b/index1.html
@@ -13,10 +13,22 @@
         <div class="col-sm-3">
 
             <nav class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+                <div class="col-2">
                 <img src="https://ajanuw.gallerycdn.vsassets.io/extensions/ajanuw/bs5/0.7.0/1646364353922/Microsoft.VisualStudio.Services.Icons.Default"
                      alt="Bootstrap" width="30" height="24">
+                </div>
+                <div class="col-10">
+                    <div class="container text-center">
+
                 <p class="text-white bg-dark">Меню</p>
+                    </div>
+                </div>
+
                 </a>
+<hr width="500px;"
+        color="white"
+        size="4"
+        align="center">
             </nav>
             <ul class="nav flex-column">
                 <li class="nav-item">
@@ -35,6 +47,10 @@
         </div>
         <div class="col-sm-9 mt-5">
             <div class="row">
+                <div class="container text-center">
+                <h1>КАТАЛОГ</h1>
+                <p class="lead mt-5 ">Вы находитесь на сайте, предназначенном для продажи товаров</p>
+            </div>
                 <div class="col-6 col-sm-4">
                     <div class="card">
                         <div class="card-header">
